Update to Ikoma version.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>さっぽろ保育園マップ by パパママまっぷ</title>
+        <title>いこま保育園マップ by CODE for IKOMA</title>
         <link rel="stylesheet" href="css/ol.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.css.map" type="text/css">
@@ -66,7 +66,7 @@
                         </optgroup>
                     </select>
 
-                    <a id="btnHelp" href="http://www.codeforsapporo.org/papamama/" target="_blank" class="ui-btn ui-icon-question ui-btn-icon-notext">help</a>
+                    <a id="btnHelp" href="http://code4ikoma.org/" target="_blank" class="ui-btn ui-icon-question ui-btn-icon-notext">help</a>
                     <!--
                     <a id="btnHelp" href="#helpDialog" data-rel="popup" data-position-to="window" class="ui-btn ui-icon-question ui-btn-icon-notext">help</a>
                     -->
@@ -150,16 +150,17 @@
         <div data-role="popup" data-history="false" id="helpDialog" data-theme="a" class="ui-corner-all ui-icon-delete ui-btn-left">
             <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a>
             <div style="padding:10px 20px;">
-                <h3>さっぽろ保育園マップ</h3>
+                <h3>いこま保育園マップ</h3>
                 <fieldset>
                     <p>
-                    v1.0 (rev.20141130)
+                    v1.0 (rev.20150306)
                     </p>
                     <a href="http://www.codeforsapporo.org/papamama/" target="_blank">詳しくはこちら</a>
                 </fieldset>
                 <fieldset data-role="controlgroup" data-type="horizontal" data-mini="true">
                     <p>
-                    (C) 2014 <a href="http://www.codeforsapporo.org/" target="_blank">Code for Sapporo.</a>
+                    (C) 2014 <a href="http://www.codeforsapporo.org/" target="_blank">Code for Sapporo.</a><br>
+                    (C) 2015 customized by <a href="http://code4ikoma.org/" target="_blank">CODE for IKOMA.</a>
                     </p>
                     <a href="#" data-rel="back" id="helpClose" class="ui-btn ui-corner-all ui-btn-a ui-btn-icon-left ui-icon-check">閉じる</a>
                 </fieldset>
