--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content="http://papamama.code4ikoma.org/" />
         <meta property="og:description" content="Code for Sapporoが作ったさっぽろ保育園マップの奈良県生駒市版です。近くの保育園・幼稚園の場所などを簡単に知ることができます。" />
-        <meta property="og:image" content="/img/ogp.png" width="1200" height="665" />
+        <meta property="og:image" content="/image/ogp.png" width="1200" height="665" />
         <title>いこま保育園マップ by CODE for IKOMA</title>
         <link rel="stylesheet" href="css/ol.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
